# C-for-Machine-Learning

./: CMakeLists.txt  example-app.cpp
C++ Basics/: Basics.cpp
TestTorch/: CMakeLists.txt  LinearRegression.cpp  MLP_Regression.cpp  TestTorch.cpp  TestTorch.h
